--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,7 @@ body{
 }
 
 .chapter-menu{
-    min-height: 100%;
-    max-height: 100%;
+    min-height: 100vh;
     position: absolute;
     display: flex;
     color: #ADB9D2;
@@ -65,6 +64,7 @@ body{
     width: 70px;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
 }
 
 .circle{
