--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@ body{
 
 .chapter-menu{
     min-height: 100vh;
+    max-height: 100vh;
     position: absolute;
     display: flex;
     color: #ADB9D2;
@@ -33,6 +34,7 @@ body{
     padding-top: 50px;
     background-color: #51607F;
     width: 470px;
+    overflow: auto;
 }
 
 .chapter{
