--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
 .chapter-menu{
@@ -74,3 +75,63 @@ body{
     background-color: #707070;
     border-radius: 50%;
 }
+
+#toDoList{
+    position: absolute;
+    bottom: -423px;
+    right: 0px;
+    height: 470px;
+    width: 400px;
+    transition: 1s;
+}
+
+#upperTDL{
+    width: 100%;
+    height: 10%;
+    background-color: #2c2e33;
+    color: #EEEEEE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+}
+
+#lowerTDL{
+    width: 100%;
+    height: 90%;
+    background-color: #4E5057;
+    
+}
+
+li{
+    list-style: none;
+    
+}
+
+h4{
+    font-size: 22px;
+    color: #EEEEEE;
+    padding: 10px 10px;
+}
+
+
+pre{
+    height: 130px;
+    margin: 10px 20px;
+    background-color: #BABABA;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    white-space : pre-wrap;
+    overflow: auto;
+}
+
+code{
+    padding: 10px 10px;
+}
+
+code::before{
+    content: "> ";
+}
+
+
