--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,18 @@ body{
     overflow: hidden;
 }
 
+nav{
+    position: relative;
+    width: 100%;
+    min-height: 50px;
+    background-color: #2c2e33;
+}
+
+
+
+
+
+
 /* MENU DE GAUCHE */
 
 .chapter-menu{
