--- a/style/termStyle.css
+++ b/style/termStyle.css
@@ -2,7 +2,7 @@
 
 main{
     width: 100vw;
-    height: 100vh;
+    height: 91vh;
 }
 
 
@@ -12,6 +12,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(79, 95, 126);
 }
 
 #term{
@@ -32,10 +33,15 @@ main{
 }
 
 #term-container{
-    width: 1100px;
-    height: 450px;
+    width: 1140px;
+    height: 490px;
     background-color: black;
+    box-shadow: 1px 5px 10px black;
+    border: solid 20px #4E5057;
+    transition: 0.7s;
 }
+
+
 
 #term_text{
     height: 25px;
