--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,7 @@
 /* THIS IS MAIN CSS */
-
+:root{
+    --clear-color: #ADB9D2;
+}
 * {
     margin: 0;
     padding: 0;
@@ -12,15 +14,33 @@ body{
 }
 
 nav{
-    position: relative;
     width: 100%;
-    min-height: 50px;
+    height: 50px;
     background-color: #2c2e33;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    color: var(--clear-color);
+
+
+}
+.logo, nav ul{
+    align-items: center;
+    display: flex;
+}
+nav ul{
+    display: flex;
+    align-content: center;
+
+}
+nav ul li{
+    margin: auto 3rem;
 }
 
-
-
-
+nav a{
+    color: var(--clear-color);
+    text-decoration: none;
+}
 
 
 /* MENU DE GAUCHE */
@@ -30,7 +50,7 @@ nav{
     max-height: 100vh;
     position: absolute;
     display: flex;
-    color: #ADB9D2;
+    color: var(--clear-color);
     width: fit-content;
     transform: translate(-470px, 0);
     transition: 1s;
@@ -63,7 +83,7 @@ nav{
     margin: 20px 0;
     border: none;
     height: 2px;
-    background-color: #ADB9D2;
+    background-color: var( --clear-color);
 }
 
 .chapter-name:hover{
