:bug: header fixed

--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ nav{
     align-content: center;
     color: var(--clear-color);
     position: relative;
-    top: 50px;
+    top: 0%;
     z-index: 10;
 
 
