--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@ body{
 
 nav{
     width: 100%;
-    height: 50px;
+    height: 5vh;
     background-color: #2c2e33;
     display: flex;
     justify-content: space-around;
@@ -44,6 +44,15 @@ nav a{
     color: var(--clear-color);
     text-decoration: none;
 }
+
+main{
+    width: 100vw;
+    height: 95vh;
+}
+
+
+
+
 
 
 /* MENU DE GAUCHE */
