--- a/style/style.css
+++ b/style/style.css
@@ -11,10 +11,9 @@ body{
     overflow: hidden;
 }
 
-nav{
-    position: relative;
-    width: 100%;
+header{
     min-height: 50px;
+    width: 100%;
     background-color: #2c2e33;
 }
 
