--- a/style/style.css
+++ b/style/style.css
@@ -115,11 +115,11 @@ main{
     width: 70px;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    max-height: 95vh;
 }
 
 .circle{
-    margin: 15px 0;
+    margin: 15px 0px;
     width: 50px;
     height: 50px;
     background-color: #707070;
