--- a/style/style.css
+++ b/style/style.css
@@ -14,19 +14,25 @@ body{
 }
 
 header{
-    min-height: 50px;
+    min-height: 5vh;
     width: 100%;
     background-color: #2c2e33;
     display: flex;
-    justify-content: space-around;
-    align-content: center;
+    justify-content: center;
+    align-items: center;
     color: var(--clear-color);
     position: relative;
     top: 0%;
     z-index: 10;
-
-
 }
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+}
+
 .logo, nav ul{
     align-items: center;
     display: flex;
