:lipstick:Centering terminal:lipstick:

--- a/style/termStyle.css
+++ b/style/termStyle.css
@@ -13,6 +13,7 @@ main{
     justify-content: center;
     align-items: center;
     background-color: rgb(79, 95, 126);
+    padding-left: 70px;
 }
 
 #term{
