--- a/style/style.css
+++ b/style/style.css
@@ -80,15 +80,16 @@ main{
 } 
 
 .chapter-menu h2{
-    text-align: center;
     font-size: 40px;
     margin-bottom: 100px;
+    margin-left: 60px;
 }
 
 .left-menu{
     padding-top: 50px;
     background-color: #51607F;
     width: 470px;
+    height: 95vh;
     overflow: auto;
 }
 
