--- a/style/termStyle.css
+++ b/style/termStyle.css
@@ -38,8 +38,10 @@ main{
     height: 490px;
     background-color: black;
     box-shadow: 1px 5px 10px black;
-    border: solid 20px #4E5057;
+    border: solid 15px #4E5057;
+    border-radius: 15px;
     transition: 0.7s;
+
 }
 
 
