--- a/style/style.css
+++ b/style/style.css
@@ -137,7 +137,7 @@ main{
 
 #toDoList{
     position: absolute;
-    bottom: -423px;
+    bottom: -420px;
     right: 0px;
     height: 470px;
     width: 400px;
@@ -146,7 +146,7 @@ main{
 
 #upperTDL{
     width: 100%;
-    height: 10%;
+    height: 50px;
     background-color: #2c2e33;
     color: #EEEEEE;
     display: flex;
@@ -157,7 +157,7 @@ main{
 
 #lowerTDL{
     width: 100%;
-    height: 90%;
+    height: 420px;
     background-color: #4E5057;
     
 }
