--- a/style/termStyle.css
+++ b/style/termStyle.css
@@ -7,6 +7,8 @@ main{
 
 #main-container{
     width: 100%;
+    max-width: 100vw;
+    max-height: 95vh;
     height: 95vh;
     display: flex;
     justify-content: center;
