:bug: fix tdl overflowing :bug:

--- a/style/style.css
+++ b/style/style.css
@@ -67,8 +67,8 @@ main{
 /* MENU DE GAUCHE */
 
 .chapter-menu{
-    min-height: 100vh;
-    max-height: 100vh;
+    min-height: 95vh;
+    max-height: 95vh;
     position: absolute;
     display: flex;
     color: var(--clear-color);
@@ -140,9 +140,9 @@ main{
 
 #toDoList{
     position: absolute;
-    bottom: -420px;
+    bottom: 0px;
     right: 0px;
-    height: 470px;
+    height: 50px;
     width: 400px;
     transition: 1s;
 }
@@ -167,7 +167,7 @@ main{
     padding-top: 15px;
     height: 420px;
     background-color: #4E5057;
-    
+    display: none;
 }
 
 li{
