--- a/style/style.css
+++ b/style/style.css
@@ -77,10 +77,10 @@ main{
     transition: 1s;
 }
 
-.chapter-menu:hover{
+/* .chapter-menu:hover{
     transform: translate(0,0);
     transition: 0.5s;
-} 
+}  */
 
 .chapter-menu h2{
     font-size: 40px;
@@ -127,6 +127,9 @@ main{
     align-items: center;
     max-height: 95vh;
 }
+.right-menu:hover{
+    cursor: pointer;
+}
 
 .circle{
     margin: 15px 0px;
@@ -134,6 +137,9 @@ main{
     height: 50px;
     background-color: #707070;
     border-radius: 50%;
+}
+.circle:hover{
+    background-color: rgb(0, 255, 0);;
 }
 
 /*--------------------------TO DO LIST--------------------------- */
