--- a/style/termStyle.css
+++ b/style/termStyle.css
@@ -6,7 +6,7 @@
     max-height: 95vh;
     height: 95vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     /* background-color: rgb(79, 95, 126); */
     padding-left: 70px;
@@ -76,8 +76,6 @@
     font-family: 'VT323', monospace;
     font-size: 1.2rem;
     letter-spacing: 0.5px;
-    text-transform: lowercase;
-    
 
 }
 
