--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
     --galery-color: #eeeeee;
     --silver-color: #BABABA;
     --shark-color: #2c2e33;
+    --dark-color: #232427;
     --abbey-color: #4E5057;
     --dove-grey:   #707070;
     --solid-green: #00FF00;
@@ -19,6 +20,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     overflow: hidden;
+    min-height: 800px;
 }
 
 a{
@@ -45,6 +47,9 @@ nav{
     width: 80%;
 }
 
+
+
+
 .logo, nav ul{
     align-items: center;
     display: flex;
@@ -66,7 +71,6 @@ main{
     width: 100vw;
     height: 95vh;
 }
-
 
 
 
@@ -151,7 +155,81 @@ main{
     background-color:var(--solid-green);
 }
 
-/*--------------------------TO DO LIST--------------------------- */
+/*------------------------MAIN CONTAINER + AJOUTS ACCUEIL------------------------*/
+
+.main-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue-bayoux);
+    right: 0;
+}
+
+h1{
+    height: 35px;
+    width: 100%;
+    margin: 50px 120px;
+    color: var(--galery-color);
+}
+
+section{
+    width: 25%;
+    height: 180px;
+    display: flex;
+    justify-content: center;
+    color: var(--clear-color);
+    padding: 15px;
+}
+
+.accueil{
+    display: flex;
+    flex-direction: column;
+    padding:0 0 0 0 !important;
+}
+
+.titre-accueil{
+    padding: 5px 20px;
+    background-color: var(--shark-color);
+    border: solid 3px rgb(24, 24, 24);
+}
+
+.accueil a{
+    font-size:27px;
+    color: var(--clear-color);
+}
+
+.sections-container{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 200px;
+    margin: 0 auto;
+    background-color: var(--shark-color);
+}
+
+.title-container{
+    width: 80%;
+    height: 60px;
+    margin: 0 auto;
+    background-color: var(--dark-color);
+    color: var(--clear-color);
+    font-size: 30px;
+    padding: 10px 10px;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background-color: var(--shark-color);
+    color: whitesmoke;
+}
+
+/*--------------------------TO DO LIST--------------------------*/
 
 #toDoList{
     position: absolute;
@@ -182,12 +260,7 @@ main{
     width: 100%;
     padding-top: 15px;
     height: 420px;
-<<<<<<< HEAD
     background-color: var(--abbey-color);
-    
-=======
-    background-color: #4E5057;
->>>>>>> terminal-ability
 }
 
 li{
