--- a/style/sass/import.scss
+++ b/style/sass/import.scss
@@ -8,8 +8,8 @@
 @import "components/chaptersMenu.scss";
 @import "components/levelDescription.scss";
 @import "components/term.scss";
+@import "components/notepad.scss";
 @import "components/toDoList.scss";
-@import "components/main.scss";
 @import "components/mainBackground.scss";
 //---------------------------------------------------
 
