:sparkles:tooltips:sparkles:

--- a/style/sass/import.scss
+++ b/style/sass/import.scss
@@ -10,6 +10,7 @@
 @import "components/term.scss";
 @import "components/notepad.scss";
 @import "components/toDoList.scss";
+@import "components/tooltip.scss";
 @import "components/mainBackground.scss";
 //---------------------------------------------------
 
