--- a/style/sass/components/_header.scss
+++ b/style/sass/components/_header.scss
@@ -55,7 +55,7 @@ header {
             }
 
             &:checked{
-                background: red;
+                background: rgb(170, 13, 13);
             }
         }
 
